footer casi terminado solo falta algo de css

--- a/maquetacion/index.html
+++ b/maquetacion/index.html
@@ -49,13 +49,13 @@
 					<h2>Warm welcome</h2>
 					<p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove, the headline of Alphabet Village and the subline of her own road, the Line Lane.</p>
 					<a href="#" class="da-link">Read more</a>
-					<div class="da-img"><img src="img/super_foto1.jpg" alt="image01" /></div>
+					<div class="da-img"><img src="img/super_foto3.jpg" alt="image01" /></div>
 				</div>
 				<div class="da-slide">
 					<h2>Quality Control</h2>
 					<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
 					<a href="#" class="da-link">Read more</a>
-					<div class="da-img"><img src="img/super_foto1.jpg" alt="image01" /></div>
+					<div class="da-img"><img src="img/super_foto4.jpg" alt="image01" /></div>
 				</div>
 				<nav class="da-arrows">
 					<span class="da-arrows-prev"></span>
@@ -172,20 +172,50 @@
 				</li>
 			</ul>			
 		</article>
+		
 		<footer>
-				<ul>
-					<li><a href="#">Contáctenos</a></li>
-					<li><a href="#">Vende tus polos</a></li>
-				</ul>
-				<div id="programadores">
-					<span>Programadores</span>
+				<div class="registra">
+				<h4>¿Quieres vender tus polos?</h4>
+				<h5>No busques más vende con nosotros, registrate <a href="#">aqui</a></h5>
+				<a class="oferta" href="#">
+					<span></span>
+				</a>
+				</div>
+				<div id="contacto">
 					<ul>
-						<li><img src="img/logo.png" alt="logo" width="50"/></li>						
-						<li><img src="img/logo.png" alt="logo" width="50"/></li>						
-						<li><img src="img/logo.png" alt="logo" width="50"/></li>						
+						<li class="lista_footer">
+							<h3>Contáctenos</h3>
+							<ul>
+								<li><b>Llamar:</b> +44 0208 7894 457</li>
+								<li><b>Correo:</b> contactenos@polet.com</li>
+							</ul>
+						</li>
+						<li class="lista_footer">
+							<h3>Siguenos en</h3>
+							<ul>
+								<li><span></span></li>
+								<li><span></span></li>
+							</ul>
+						</li>
+						<li class="lista_footer">
+							<h3>Suscribete!</h3>
+							<ul>
+								<li>Suscribete a nuestra mailing diario para estar al tanto de nuestros mejores polos</li>
+								<li><input type="text"><a class="btn" href="#">suscribirme</a></li>
+							</ul>
+						</li>
+						<li class="lista_footer">
+							<h3>Cosas aburridas</h3>
+							<ul>
+								<li>Copyright © 2012 All Rights Reserved </li>
+								<li><a href="terminos">Terminos y condiciones</a></li>
+								<li><a href="privacidad">Política de Privacidad</a></li>
+							</ul>
+						</li>
 					</ul>
 				</div>
 		</footer>
+		
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 		<script type="text/javascript" src="js/jquery.cslider.js"></script>
 		<script type="text/javascript" src="js/funciones.js"></script>	
