falta la opcion suscribirse

--- a/maquetacion/index.html
+++ b/maquetacion/index.html
@@ -9,6 +9,7 @@
 		<noscript>
 			<link rel="stylesheet" type="text/css" href="css/nojs.css" />
 		</noscript>
+		<link href='http://fonts.googleapis.com/css?family=Montez' rel='stylesheet' type='text/css'>
 		<title>Polet</title>
 	</head>
 	<body>
@@ -21,6 +22,7 @@
 						<h2>Tienda Virtual de Polos</h2>
 					</hgroup>
 				</a>
+				<div class="titulo">Polet</div>
 				<nav id="menu">
 					<ul>
 						<li><input type="text" id="buscar" placeholder="Buscar"/><span class="img-buscar"></span></li>
@@ -175,44 +177,37 @@
 		
 		<footer>
 				<div class="registra">
-				<h4>¿Quieres vender tus polos?</h4>
-				<h5>No busques más vende con nosotros, registrate <a href="#">aqui</a></h5>
+				<h4>¿Nos quieres contactar?</h4>
+				<h5>Si tienes alguna sugerencia para nosotros no dudes en hacerla <a href="#">aqui</a></h5>
 				<a class="oferta" href="#">
 					<span></span>
 				</a>
 				</div>
 				<div id="contacto">
-					<ul>
-						<li class="lista_footer">
-							<h3>Contáctenos</h3>
-							<ul>
-								<li><b>Llamar:</b> +44 0208 7894 457</li>
-								<li><b>Correo:</b> contactenos@polet.com</li>
-							</ul>
-						</li>
-						<li class="lista_footer">
+		
+						<div class="siguenos">
 							<h3>Siguenos en</h3>
 							<ul>
-								<li><span></span></li>
-								<li><span></span></li>
+								<li><a href="#"><img src="img/facebook.png" alt="face" width="50"/></a></li>
+								<li><a href="#"><img src="img/twitter.png" alt="twitt" width="50"/></a></li>
 							</ul>
-						</li>
-						<li class="lista_footer">
+						</div>
+						<div class="suscribete">
 							<h3>Suscribete!</h3>
 							<ul>
 								<li>Suscribete a nuestra mailing diario para estar al tanto de nuestros mejores polos</li>
 								<li><input type="text"><a class="btn" href="#">suscribirme</a></li>
 							</ul>
-						</li>
-						<li class="lista_footer">
+						</div>
+						<div class="otros">
 							<h3>Cosas aburridas</h3>
 							<ul>
 								<li>Copyright © 2012 All Rights Reserved </li>
 								<li><a href="terminos">Terminos y condiciones</a></li>
 								<li><a href="privacidad">Política de Privacidad</a></li>
 							</ul>
-						</li>
-					</ul>
+						</div>
+	
 				</div>
 		</footer>
 		
