--- a/maquetacion/index.html
+++ b/maquetacion/index.html
@@ -15,14 +15,7 @@
 	<body>
 		<header>
 			<div class="wrapper">
-				
-				<a id="logo" href="index.html">
-					<hgroup>
-						<h1>Polet</h1>
-						<h2>Tienda Virtual de Polos</h2>
-					</hgroup>
-				</a>
-				<div class="titulo">Polet</div>
+				<h1 class="titulo">Polet</h1>
 				<nav id="menu">
 					<ul>
 						<li><input type="text" id="buscar" placeholder="Buscar"/><span class="img-buscar"></span></li>
@@ -32,9 +25,9 @@
 						<li><a href="#">Ingresar<span class="img-ingresar"></span></a></li>
 					</ul>
 				</nav>
-			</div>
-			
-			<div id="da-slider" class="da-slider">
+			</div>			
+		</header>
+		<div id="da-slider" class="da-slider">
 				<div class="da-slide">
 					<h2>Polo Demo 1</h2>
 					<p>A solo S/. 120.00 el polo cerrará en 12:10:30</p>
@@ -64,8 +57,6 @@
 					<span class="da-arrows-next"></span>
 				</nav>
 			</div>
-			
-		</header>
 		<article>
 			<ul id="contenedor">
 				<li id="productos">
