--- a/maquetacion/index.html
+++ b/maquetacion/index.html
@@ -16,12 +16,12 @@
 	<body>
 		<header>
 			<div class="wrapper">
-				<h1 class="titulo">Polet</h1>
+				<h1 class="titulo"><a href="index.html">Polet</a></h1>
 				<nav id="menu">
 					<ul>
 						<li><input type="text" id="buscar" placeholder="Buscar"/><span class="img-buscar"></span></li>
 						<li><span class="separador"></span></li>
-						<li><a href="#">Polos<span class="img-polo"></span></a></li>
+						<li><a href="polos.html">Polos<span class="img-polo"></span></a></li>
 						<li><span class="separador"></span></li>
 						<li><a href="#">Ingresar<span class="img-ingresar"></span></a></li>
 					</ul>
