--- a/maquetacion/index.html
+++ b/maquetacion/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<link rel="stylesheet" href="css/reset.css"/>
-		<link href='http://fonts.googleapis.com/css?family=Montez' rel='stylesheet' type='text/css'>
+		<link href='http://fonts.googleapis.com/css?family=Montez' rel='stylesheet' type='text/css'/>
 		<link rel="stylesheet" href="css/menu.css"/>
 		<link rel="stylesheet" href="css/style.css"/>
 		<script type="text/javascript" src="js/modernizr.custom.28468.js"></script>
@@ -158,11 +158,11 @@
 							<ul></ul>
 						</li>
 						<li id="facebook">
-							<h3>Facebook</h3>
+							<h3><img src="img/logo_facebook.png" width="170" alt="facebook titulo"></h3>
 							<ul>
-								<li><img src="img/logo.png" alt="face" width="50"/><span class="textFace">lorem uipsa asoas sasede def dof saed</span></li>
-								<li><img src="img/logo.png" alt="face" width="50"/><span class="textFace">lorem uipsa asoas sasede def dof saed</span></li>
-								<li><img src="img/logo.png" alt="face" width="50"/><span class="textFace">lorem uipsa asoas sasede def dof saed</span></li>
+								<li><img src="img/ico_face.png" alt="face" width="50"/><span class="textFace">lorem uipsa asoas sasede def dof saed</span></li>
+								<li><img src="img/ico_face.png" alt="face" width="50"/><span class="textFace">lorem uipsa asoas sasede def dof saed</span></li>
+								<li><img src="img/ico_face.png" alt="face" width="50"/><span class="textFace">lorem uipsa asoas sasede def dof saed</span></li>
 							</ul>
 						</li>
 					</ul>
